crates/vm/tests/snapshots/object_load_index__field.snap
---
source: crates/vm/tests/object_load_index.rs
expression: snapshot
---
# Input:
v := { a: 10 }
print v["a"]


# Result (success):
none

# Stdout:
10

