crates/vm/tests/snapshots/object_load_index__nested_unknown.snap
---
source: crates/vm/tests/object_load_index.rs
expression: snapshot
---
# Input:
v := { a: {} }
print v["a"]["b"]


# Result (error):
[31merror[0m in code: cannot get field `"b"` on value `{}`


# Stdout:

